# grow

./: .http  Cargo.toml  build.nu  deploy.nu  kill.nu  rasp.nu  readme.md  toolchain.toml
dashboard/: package-lock.json  package.json
dashboard/src/lib/: piApi.ts  repeat.ts
dashboard/src/routes/: +page.svelte
pi/: Cargo.toml
pi-tool/: Cargo.toml
pi-tool/src/: main.rs
pi/src/: main.rs  relay.rs  sensor_data.rs
pi/src/humidity/: dht11.rs  dht22.rs  mod.rs
src/: circular.rs  main.rs
src/humidity/: device.rs  error.rs  mod.rs  tracker.rs
tools/: run.sh
